testing - fixed extra margin on saved page

--- a/client/src/components/Header/style.css
+++ b/client/src/components/Header/style.css
@@ -1,4 +1,4 @@
 .sticky {
     position: sticky;
-    padding-bottom: 20px;
+    padding-bottom: 50px;
 }
