--- a/client/src/components/SearchResults/style.css
+++ b/client/src/components/SearchResults/style.css
@@ -2,11 +2,6 @@
     margin: 20px;
 }
 
-h2, h3 {
-    margin: 20px;
-    padding-top: 20px;
-}
-
 .bookPhoto {
     margin: 10px auto 10px auto;
     width: 150px;
